k8s/account-deployment.yml
# https://kubernetes.io/docs/concepts/workloaccounts/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts-pod
  labels:
    app: accounts-pod
spec:
  selector:
    matchLabels:
      app: accounts-pod
  replicas: 1
  template:
    metadata:
      labels:
        app: accounts-pod
    spec:
      containers:
        - name: accounts-container
          image: squaremarketacr.azurecr.io/squaremarket-accounts:v0.1
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 100m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /v1/health
              port: 80
            initialDelaySeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          ports:
            - containerPort: 80
      restartPolicy: Always
---
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: accounts-service
spec:
  selector:
    app: accounts-pod
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
