k8s/messaging-deployment.yml
# https://kubernetes.io/docs/concepts/workloadvertisements/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messages-pod
  labels:
    app: messages-pod
spec:
  selector:
    matchLabels:
      app: messages-pod
  replicas: 1
  template:
    metadata:
      labels:
        app: messages-pod
    spec:
      containers:
        - name: messages-container
          image: squaremarketacr.azurecr.io/squaremarket-messages:v0.4
          imagePullPolicy: Always
          # resources:
          #   requests:
          #     cpu: 250m
          #     memory: 1Gi
          #   limits:
          #     cpu: 500m
          #     memory: 1Gi
          readinessProbe:
            httpGet:
              path: /v1/health
              port: 80
            initialDelaySeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          ports:
            - containerPort: 80
      restartPolicy: Always
---
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: messages-service
spec:
  selector:
    app: messages-pod
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
