k8s/gateway-ingress.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: gateway
              port:
                number: 80
